other-vpol/check-serviceaccount/.chainsaw-test/chainsaw-step-02-apply-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: check-sa-ns
