other-vpol/check-serviceaccount/.chainsaw-test/chainsaw-step-02-apply-2.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: restricted
  namespace: check-sa-ns
