other-vpol/check-serviceaccount/.chainsaw-test/chainsaw-step-02-apply-4.yaml
apiVersion: v1
kind: Secret
metadata:
  annotations:
    kubernetes.io/service-account.name: safe
  name: safe-secret
  namespace: check-sa-ns
type: kubernetes.io/service-account-token
