other-vpol/check-serviceaccount/.chainsaw-test/chainsaw-step-02-apply-5.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: pod-manager
  namespace: check-sa-ns
rules:
- apiGroups:
  - ""
  resources:
  - pods
  verbs:
  - get
  - create
  - delete
- apiGroups:
  - apps
  resources:
  - deployments
  verbs:
  - get
  - create
  - delete
- apiGroups:
  - batch
  resources:
  - cronjobs
  verbs:
  - get
  - create
  - delete
