other-vpol/check-serviceaccount/.chainsaw-test/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
  namespace: check-sa-ns
spec:
  serviceAccountName: restricted
  containers:
  - image: ghcr.io/kyverno/test-busybox:1.35
    name: busybox
    args:
    - sleep
    - "300"
