other-vpol/check-serviceaccount/check-serviceaccount.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: check-sa
  annotations:
    policies.kyverno.io/title: Check ServiceAccount
    policies.kyverno.io/category: Sample
    policies.kyverno.io/subject: Pod,ServiceAccount
    kyverno.io/kyverno-version: 1.15.0
    policies.kyverno.io/minversion: 1.17.0
    kyverno.io/kubernetes-version: "1.30"
    policies.kyverno.io/description: >-
      ServiceAccounts with privileges to create Pods may be able to do so and name
      a ServiceAccount other than the one used to create it. This policy checks the
      Pod, if created by a ServiceAccount, and ensures the `serviceAccountName` field
      matches the actual ServiceAccount.
spec:
  evaluation:
    background:
      enabled: false
  validationActions:
    - Audit
  variables:
    - name: creatorServiceAccount
      expression: parseServiceAccount(request.userInfo.username)
    - name: podServiceAccountName
      expression: object.spec.?serviceAccountName.orValue('default')
  matchConstraints:
    resourceRules:
      - resources:
          - pods
        operations:
          - CREATE
        apiGroups:
          - ""
        apiVersions:
          - v1
  validations:
    - message: The ServiceAccount used to create this Pod is confined to using the same account when running the Pod.
      expression: "!request.userInfo.username.startsWith('system:serviceaccount:') || variables.creatorServiceAccount.Name == variables.podServiceAccountName"
