other-vpol/check-serviceaccount/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: check-serviceaccount
spec:
  steps:
  - name: shared-exception-namespace
    skipDelete: true
    try:
    - apply:
        file: policy-exceptions-namespace.yaml
  - name: step-01
    try:
    - apply:
        file: ../check-serviceaccount.yaml
    - apply:
        file: policy-exception.yaml
    - patch:
        resource:
          apiVersion: policies.kyverno.io/v1
          kind: ValidatingPolicy
          metadata:
            name: check-sa
          spec:
            validationActions:
             - Deny
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1.yaml
    - apply:
        file: chainsaw-step-02-apply-2.yaml
    - apply:
        file: chainsaw-step-02-apply-3.yaml
    - apply:
        file: chainsaw-step-02-apply-4.yaml
    - apply:
        file: chainsaw-step-02-apply-5.yaml
    - apply:
        file: chainsaw-step-02-apply-6.yaml
  - name: step-03
    try:
    - script:
        content: |
          #!/bin/bash
          set -eu

          # Setting up the SA user
          export TOKEN_SA=`kubectl get secret safe-secret -n check-sa-ns -ojsonpath='{.data.token}' | base64 -d`
          kubectl config set-credentials safe-user --token=${TOKEN_SA}
          kubectl config set-context safe-context --user=safe-user --cluster=chainsaw --namespace=check-sa-ns

          # Applying Manifests
          kubectl config use-context safe-context
          kubectl apply -f pod-good.yaml
          if kubectl apply -f pod-bad.yaml; then exit 1; else echo "badpod01 failed to create"; fi
          kubectl apply -f podcontroller-good.yaml
          if kubectl apply -f podcontroller-bad.yaml; then exit 1; else echo "badpodcontrollers failed to create"; fi
    finally:
    - script:
        content: |
          set -e
          kubectl delete -f pod-good.yaml --ignore-not-found
    - script:
        content: |
          set -e
          kubectl delete -f pod-bad.yaml --ignore-not-found
    - script:
        content: |
          set -e
          kubectl delete -f podcontroller-good.yaml --ignore-not-found
    - script:
        content: |
          set -e
          kubectl delete -f podcontroller-bad.yaml --ignore-not-found
